# dali_backend

./: .clang-format  .gitignore  .gitmodules  Acknowledgements.txt  CLA.md  CMakeLists.txt  DALI_EXTRA_VERSION  Dockerfile  LICENSE.md  README.md  format.py
benchmarks/BM_efficientnet/: Dockerfile.torch  README.md  benchmark-cpu.sh  benchmark.sh  figure_ci.sh  reset_benchmark.sh  run-benchmarks-cpu.sh  run-benchmarks.sh  setup.sh
benchmarks/BM_efficientnet/scripts/: concatenate_results.py  model-loader.py
benchmarks/BM_resnet101/: run-benchmarks.sh  setup.sh
benchmarks/BM_resnet101/model_repository/dali_preprocessing/: config.pbtxt
benchmarks/BM_resnet101/model_repository/segmentation_bls/: config.pbtxt
benchmarks/BM_resnet50/: run-benchmarks.sh  setup.sh
benchmarks/BM_resnet50/scripts/: dataset_preprocess.py  download_checkpoint.sh  model-loader.py  prepare-input-data.py
benchmarks/dali_vs_python/: Dockerfile.client  Dockerfile.server  pipelines_compare_client.py  run_benchmark.py
benchmarks/dali_vs_python/BM_jasper/: README.md  setup.sh
benchmarks/dali_vs_python/BM_rn50/: pipelines_compare_client.py  run_benchmark.py  setup.sh
benchmarks/dali_vs_python/BM_rn50_cvcuda/: setup.sh
benchmarks/resnet50/: dataset_preprocess.py  run-benchmarks.sh  setup.sh
benchmarks/resnet50/inputs-data/: input
benchmarks/resnet50/scripts/: dataset_preprocess.py  model-loader.py  onnx2trt.py
client/: Dockerfile.client  dali_grpc_client.py  dali_multi_input_client.py  utils.py
cmake/: TritonDaliBackendConfig.cmake.in  backtrace.cmake  dali.cmake  dalienv-extra_args.yml.in  dalienv.yml.in  lint.cmake  utils.cmake
docker/: Dockerfile.devel  Dockerfile.jetson  Dockerfile.prod  Dockerfile.release
docs/: config.md
docs/examples/dali_plugin/: README.md  custom_copy_client.py  custom_copy_pipeline.py  setup.sh
docs/examples/efficientnet/: 0001-Update-requirements-and-add-Dockerfile.bench.patch  deploy_on_triton.py  install_dependencies.sh  setup.sh
docs/examples/identity/: README.md  identity_pipeline.py  setup.sh  setup_identity_example.sh
docs/examples/inception_ensemble/: README.md  inception_pipeline.py  setup_inception_example.sh
docs/examples/multi_input/: README.md  multi_input_pipeline.py  setup_multi_input_example.sh
docs/examples/perf_analyzer/: README.md  decoding_pipeline.py  setup_perf_analyzer_example.sh
docs/examples/resnet50_trt/: README.md  client.py  onnx_exporter.py  serialize_dali_pipeline.py  setup_resnet50_trt_example.sh
docs/examples/rn50_ensemble/: README.md  rn50_pipeline.py  setup_resnet50_example.sh
docs/examples/segmentation/: README.md  install_dependencies.sh  setup_segmentation_example.sh
docs/examples/segmentation_bls/: setup_segmentation_example.sh
docs/examples/video_decode_remap/: README.md  client.py
docs/examples/video_decode_split/: client.py  test.py
docs/examples/video_decoding/: README.md
docs/tutorials/: training_to_inference.md
python/dali_backend/test_utils/: client.py
qa/: setup_dali_extra.sh
qa/L0_DALI_GPU_ensemble/: client.py  setup.sh  test.sh
qa/L0_autoconfig/: client.py  setup.sh  test.sh
qa/L0_cmd_injection/: client.py  setup.sh  test.sh
qa/L0_config_validation/: client.py  pipeline_cpu.py  pipeline_gpu.py  setup.sh
qa/L0_dont_release_after_unload/: setup.sh  test.sh
qa/L0_dont_release_after_unload/scripts/: compare_memory_usage.py  model-loader.py
qa/L0_identity/: identity_client.py  model_repository  setup.sh  test.sh
qa/L0_identity/model_repository/: README.md  identity_pipeline.py  setup.sh  setup_identity_example.sh
qa/L0_identity_cpu/: identity_client.py  setup.sh  test.sh
qa/L0_identity_cpu/model_repository/: identity_pipeline.py
qa/L0_img_proc/: client.py  setup.sh  test.sh
qa/L0_inception_ensemble/: ensemble_client.py  setup.sh  test.sh
qa/L0_inception_ensemble/images/: labels.txt
qa/L0_inception_ensemble/model_repository/: inception_pipeline.py  setup_inception_example.sh
qa/L0_many_versions/: many_versions_client.py  setup.sh  test.sh
qa/L0_many_versions/model_repository/: addition_pipeline.py
qa/L0_multi_input/: multi_input_client.py  setup.sh  test.sh
qa/L0_multi_input/model_repository/: multi_input_pipeline.py  setup_multi_input_example.sh
qa/L0_perf_analyzer_example/: setup.sh  test.sh
qa/L0_release_after_unload/: test.sh
qa/L0_release_after_unload/scripts/: compare_memory_usage.py
qa/L0_resnet50/: client.py  setup.sh
qa/L0_resnet50_ensemble/: setup.sh  test.sh  test_client.py
qa/L0_resnet50_ensemble/images/: labels.txt
qa/L0_resnet50_trt/: setup.sh  test.sh
qa/L0_resnet50_trt/model_repository/: serialize_dali_pipeline.py  setup_resnet50_trt_example.sh
qa/L0_rn50_ensemble/: ensemble_client.py  test.sh
qa/L0_segmentation/: client.py  install.sh  setup.sh  test.sh
qa/L0_unbatched_model/: client.py  setup.sh  test.sh
qa/L0_video_input_decoupled/: client.py  setup.sh  test.sh
qa/L0_video_split/: client.py  test.sh
qa/L1_DALI_GPU_ensemble/: client.py
qa/L1_release_after_unload/: setup.sh  test.sh
qa/identity/: identity_client.py
qa/inception_ensemble/: ensemble_client.py
qa/multi_input/: multi_input_client.py
qa/rn50_ensemble/: ensemble_client.py
src/: CMakeLists.txt  dali_backend.cc  dali_backend.h  dali_model.cc  dali_model.h  dali_model_instance.cc  dali_model_instance.h  error_handling.h  libtriton_dali.ldscript  parameters.h
src/config_tools/: config_tools.cc  config_tools.h  config_tools.test.cc
src/dali_executor/: CMakeLists.txt  dali_executor.cc  dali_executor.h  dali_pipeline.cc  dali_pipeline.h  executor.test.cc  io_buffer.cc  io_buffer.h  io_buffer.test.cc  io_descriptor.h  io_descriptor.test.cc  main.test.cc  pipeline_group.cc  pipeline_group.h  pipeline_pool.h  request_id.h  serialized_pipelines.h  test_data.h
src/dali_executor/test/: test_utils.h
src/dali_executor/utils/: api_utils.h  dali.h  utils.h
src/model_provider/: model_provider.h
src/utils/: backtrace.h  cmake_config.h.in  cmake_to_cpp.h  timing.h  triton.cc  triton.h  utils.h  utils.test.cc
tools/: update_container_version.sh
(+116 files in other folders)
